--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,9 @@ require:
   - rubocop-performance
 
 inherit_gem:
-  rentacop: rentacop.yml
+  rentacop:
+    - rentacop.yml
+    - rspec.yml
 
 AllCops:
   TargetRubyVersion: 2.7.0
@@ -15,24 +17,3 @@ AllCops:
 Naming/AccessorMethodName:
   Exclude:
     - 'spec/fixtures/**/*'
-
-# Prefer `receive` over `have_received`spies
-RSpec/MessageSpies:
-  EnforcedStyle: receive
-
-# Allow multiple expectations per block
-RSpec/MultipleExpectations:
-  Max: 3
-
-# Allow calling `subject` explicitly
-RSpec/NamedSubject:
-  EnforcedStyle: named_only
-
-# Allow stubbing other `subject` methods
-RSpec/SubjectStub:
-  Enabled: false
-
-# Allow unnamed doubles
-RSpec/VerifiedDoubles:
-  Enabled: false
-
