--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       LC_ALL: en_US.UTF-8 # consistent sort order
 
     strategy:
-      matrix: { ruby: ['3.0', '3.1', '3.2', head] }
+      matrix: { ruby: ['3.0', '3.1', '3.2', '3.3'] }
 
     steps:
     - name: Checkout code
